--- a/LogTest/nlog.config
+++ b/LogTest/nlog.config
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8" ?>
+
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
@@ -10,5 +11,7 @@
     <rules>
         <logger name="*" minlevel="Info" writeTo="logconsole" />
         <logger name="*" minlevel="Debug" writeTo="logfile" />
+        <!-- hay niveles de log ordenados por severidad, la linea de arriba dentro de rules, indica el nivel minimo para el cual va a mostrar el error, y de ahi si quiero que lo muestre en consola o tambien que lo agregue al archivo -->
+        <logger name="*" minlevel="Debug" writeTo="logconsole" /> <!--le agregue esta linea para que desde el nivel Debug ya escriba los errores en consola lo cual haria que la linea 12 quede obsoleta-->
     </rules>
 </nlog>
