--- a/LogTest/nlog.config
+++ b/LogTest/nlog.config
@@ -4,14 +4,15 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
     <targets>
-        <target name="logfile" xsi:type="File" fileName="file.txt" />
+        <target name="logfile" xsi:type="File" fileName="log\file.txt" />
         <target name="logconsole" xsi:type="Console" />
+        <!--con los targets, puedo cambiar el file name como ahora que le agregue una carpeta, y asi ir separando los logs dependiendo la jerarquia-->
     </targets>
 
     <rules>
         <logger name="*" minlevel="Info" writeTo="logconsole" />
         <logger name="*" minlevel="Debug" writeTo="logfile" />
         <!-- hay niveles de log ordenados por severidad, la linea de arriba dentro de rules, indica el nivel minimo para el cual va a mostrar el error, y de ahi si quiero que lo muestre en consola o tambien que lo agregue al archivo -->
-        <logger name="*" minlevel="Debug" writeTo="logconsole" /> <!--le agregue esta linea para que desde el nivel Debug ya escriba los errores en consola lo cual haria que la linea 12 quede obsoleta-->
+        <logger name="*" minlevel="Debug" writeTo="logconsole" /> <!--le agregue esta linea para que desde el nivel Debug ya escriba los errores en consola lo cual haria que la linea 13 quede obsoleta-->
     </rules>
 </nlog>
