--- a/punto4/nlog.config
+++ b/punto4/nlog.config
@@ -10,8 +10,8 @@
     </targets>
 
     <rules>
-        <logger name="*" minlevel="Debug" writeTo="logconsole" />
-        <logger name="*" minlevel="Info" writeTo="logfile1" />
+        <logger name="*" minlevel="Debug" maxlevel="Debug" writeTo="logconsole" />
+        <logger name="*" minlevel="Info" maxlevel="Info" writeTo="logfile1" />
         <logger name="*" minlevel="Warn" writeTo="logfile2" />
 
     </rules>
